--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "googleapis": "^126.0.0",
-    "@google-cloud/translate": "^8.0.0"
+    "@google-cloud/translate": "^8.0.0",
+    "lucide-react": "^0.263.1",
+    "axios": "^1.5.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.0",
